2000-03-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* README.en ("old custom" vs "new custom"): Recommend Gnus 5.4/5.5
	users to upgrade "new custom" to the latest version.
	* README.ja: Ditto.

2000-03-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* install.el (install-prefix, install-elisp-prefix,
	install-detect-elisp-directory): Rewrite.

2000-03-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-MK (config-apel, config-apel-package): Replace
	"\n" in fotmat-strings with actual newline.
	(install-apel): Add comment.
	(what-where-apel): Remove old code.

	* install.el (install-files, install-elisp-modules):
	Don't make destination directory when dry-run.
	(install-just-print-p): Add comment.
	Make format-string more verbose.

2000-03-11  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* install.el: Update headers.
	(compile-elisp-module, compile-elisp-modules, install-file,
	install-files, install-elisp-module, install-elisp-modules,
	install-overwritten-file-modes): Add doc string.
	(compile-elisp-module, compile-elisp-modules, install-file,
	install-files, install-elisp-module, install-elisp-modules,
	install-update-package-files): Rename arguments.
	(compile-elisp-modules, install-files, install-elisp-modules):
	Use `while' instead of `mapcar'.
	(install-file): Use `install-overwritten-file-modes'.
	(install-elisp-module): Use `install-file'.

2001-02-23  Katsumi Yamaoka   <yamaoka@jpl.org>

	* emu.el (char-category for XEmacs): Don't use `int-char' when the
	function `char-category-list' returns a list of characters.

2001-02-01  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* README.ja: Updated as to MAKEIT.BAT and MAKE1.BAT.
	* make1.bat: New file.
	* makeit.bat: Ditto.
	* make.bat: Removed.

2001-01-18  Katsumi Yamaoka   <yamaoka@jpl.org>

	* inv-19.el (next-visible-point): Return the value of `point-max'
	when the position of next `invisible' property change is not found.

2001-01-15  Yuuichi Teranishi  <teranisi@gohome.org>
