@@ -1,3 +1,7 @@
+2001-03-23  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* timezone.el (timezone-parse-date): Import from Emacs-20.7.
+
 2000-03-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* README.en ("old custom" vs "new custom"): Recommend Gnus 5.4/5.5
